fix(scripts): scope NEXT_PUBLIC_CODEBUFF_APP_URL to web package in worktrees
- Move URL override from root .env.development.local to web/.env.development.local
- Prevents SDK integration tests from hitting localhost instead of production
- Root .env.development.local now only contains port overrides

--- a/.github/workflows/sdk-release.yml
+++ b/.github/workflows/sdk-release.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Set environment variables
         env:
           SECRETS_CONTEXT: ${{ toJSON(secrets) }}
-          ENV_OVERRIDES: '{"NEXT_PUBLIC_CODEBUFF_BACKEND_URL": "manicode-backend.onrender.com", "NEXT_PUBLIC_CB_ENVIRONMENT": "prod"}'
+          ENV_OVERRIDES: '{"NEXT_PUBLIC_CB_ENVIRONMENT": "prod"}'
         shell: bash
         run: |
           VAR_NAMES=$(bun scripts/generate-ci-env.ts --scope client)
