--- a/bunfig.toml
+++ b/bunfig.toml
@@ -5,6 +5,6 @@ linker = "hoisted"
 linkWorkspacePackages = true
 
 [test]
-# Exclude test repositories and integration tests from test execution by default
-exclude = ["evals/test-repos/**", "**/*.integration.test.*"]
+# Exclude test repositories, integration tests, and Playwright e2e tests from test execution by default
+exclude = ["evals/test-repos/**", "**/*.integration.test.*", "web/src/__tests__/e2e/**"]
 preload = ["./sdk/test/setup-env.ts", "./test/setup-bigquery-mocks.ts"]
