--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ STRIPE_SECRET_KEY=sk_test_dummy_stripe_secret
 STRIPE_WEBHOOK_SECRET_KEY=whsec_dummy_webhook_secret
 STRIPE_USAGE_PRICE_ID=price_dummy_usage_id
 STRIPE_TEAM_FEE_PRICE_ID=price_dummy_team_fee_id
+STRIPE_SUBSCRIPTION_100_PRICE_ID=price_dummy_subscription_100_id
+STRIPE_SUBSCRIPTION_200_PRICE_ID=price_dummy_subscription_200_id
+STRIPE_SUBSCRIPTION_500_PRICE_ID=price_dummy_subscription_500_id
 
 # External Services
 LINKUP_API_KEY=dummy_linkup_key
